# flake8-scrapy

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CHANGES.rst  README.md  README.rst  flake8_scrapy.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst  options.rst  pre-commit.rst  requirements.rst  requirements.txt  tools.rst  zyte.rst
docs/rules/: index.rst  scp01.rst  scp02.rst  scp03.rst  scp04.rst  scp05.rst  scp06.rst  scp07.rst  scp08.rst  scp09.rst  scp10.rst  scp11.rst  scp12.rst  scp13.rst  scp14.rst  scp15.rst  scp16.rst  scp17.rst  scp18.rst  scp19.rst  scp20.rst  scp21.rst  scp22.rst  scp23.rst  scp24.rst  scp25.rst  scp26.rst  scp27.rst  scp28.rst  scp29.rst  scp30.rst  scp31.rst  scp32.rst  scp33.rst  scp34.rst  scp35.rst  scp36.rst  scp37.rst  scp38.rst  scp39.rst  (+7 more)
finders/: __init__.py  domains.py  oldstyle.py
flake8_scrapy/: __init__.py  ast.py  context.py  issues.py  requirements.py  settings.py
flake8_scrapy/_finders/: domains.py
flake8_scrapy/data/: packages.py  settings.py
flake8_scrapy/finders/: __init__.py  domains.py  oldstyle.py  requests.py  requirements.py  scrapinghub.py  setting_modules.py  settings.py  unsupported.py  zyte.py
scrapy_lint/: __init__.py  addons.py  ast.py  context.py  errors.py  issues.py  linter.py  packages.py  settings.py  utils.py  versions.py
scrapy_lint/data/: addons.py  packages.py  settings.py
scrapy_lint/finders/: domains.py  oldstyle.py  requests.py  requirements.py  unsupported.py  zyte.py
scrapy_lint/finders/settings/: __init__.py  types.py  values.py
tests/: __init__.py  helpers.py  settings.py  test_addons.py  test_cli.py  test_data.py  test_domains.py  test_oldstyle.py  test_requests.py  test_requirements.py  test_scrapinghub.py  test_setting_module.py  test_setting_modules.py  test_setting_name_requirements.py  test_setting_requirements.py  test_setting_values.py  test_settings.py  test_unsupported.py
tests/samples/: allowed_domains.py  url_in_allowed_domains.py
utils/: update-flake8-version.py
